# CV_RESEARCH

./: 3dsift+fpfh.cpp  3dsift+pfh.cpp  CMakeLists.txt  b4_1.ply  b4_2.ply  bun000.pcd  bun045.pcd  icp.cpp  incrementRegistraion.cpp  kl_divergence.cpp  pcd_registration.cpp
helloWorld/hello/: hello.1  main.cpp  mykernel.cl
helloWorld/helloWorld.xcodeproj/: project.pbxproj
helloWorld/helloWorld.xcodeproj/project.xcworkspace/xcuserdata/moonlight.xcuserdatad/: UserInterfaceState.xcuserstate
helloWorld/helloWorld.xcodeproj/xcuserdata/moonlight.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
helloWorld/helloWorld.xcodeproj/xcuserdata/moonlight.xcuserdatad/xcschemes/: hello.xcscheme  xcschememanagement.plist
